# nlogcat

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  lib.rs  main.rs
src/adb/: device.rs  manager.rs  mod.rs  package.rs  parser.rs  streamer.rs
src/config/: mod.rs  settings.rs
src/engine/: filter.rs  search.rs
src/ios/: checker.rs  device.rs  manager.rs  mod.rs  parser.rs  streamer.rs
src/model/: device.rs  filter_state.rs  log_buffer.rs  log_entry.rs  mod.rs
src/theme/: colors.rs  font_scanner.rs  fonts.rs  mod.rs
src/ui/: detail_modal.rs  detail_panel.rs  empty_view.rs  filter_bar.rs  help_modal.rs  icons.rs  log_table.rs  main_view.rs  mod.rs  package_filter.rs  settings_panel.rs  status_bar.rs  toolbar.rs
wix/: License.rtf  main.wxs
