[package]
name    = "nlogcat"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe      = { version = "0.28", features = ["wgpu"] }
egui        = "0.28"
egui_extras = "0.28"
tokio       = { version = "1", features = ["process", "sync", "rt-multi-thread", "io-util"] }
thiserror   = "1"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"

[dev-dependencies]

[features]
default = []
dev     = []
