[package]
name        = "nlogcat"
version     = "1.0.0"
edition     = "2021"
authors     = ["secuworm"]
license     = "MIT"
description = "Android logcat viewer for Windows"

[dependencies]
eframe      = { version = "0.28", features = ["wgpu"] }
egui        = "0.28"
egui_extras = "0.28"
tokio       = { version = "1", features = ["process", "sync", "rt-multi-thread", "io-util", "time", "macros"] }
thiserror   = "1"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"
rfd         = "0.14"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]

[features]
default = []
dev     = []

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 1
